--- a/Receipt Organizer/package.json
+++ b/Receipt Organizer/package.json
@@ -3,9 +3,16 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "bunx rork start -p t1712kte8ku919aeq8xo7 --tunnel",
-    "start-web": "bunx rork start -p t1712kte8ku919aeq8xo7 --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p t1712kte8ku919aeq8xo7 --web --tunnel"
+    "start": "expo start",
+    "start:ios": "expo start --ios",
+    "start:android": "expo start --android",
+    "start:web": "expo start --web",
+    "start:tunnel": "expo start --tunnel",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "expo prebuild --clean",
+    "build:ios": "eas build --platform ios",
+    "build:android": "eas build --platform android",
+    "build:dev": "eas build --profile development --platform ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -19,27 +26,27 @@
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
+    "expo-image": "~2.4.0",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
-    "expo-router": "~5.0.3",
+    "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.6",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "^0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "zustand": "^5.0.2"
@@ -47,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
+    "@types/node": "^24.2.0",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
