--- a/Receipt Organizer/tsconfig.json
+++ b/Receipt Organizer/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "lib": ["es2015", "es2017", "es2018", "dom"],
+    "target": "es2015",
     "paths": {
       "@/*": [
         "./*"
