--- a/Receipt Organizer/package.json
+++ b/Receipt Organizer/package.json
@@ -12,7 +12,9 @@
     "prebuild:clean": "expo prebuild --clean",
     "build:ios": "eas build --platform ios",
     "build:android": "eas build --platform android",
-    "build:dev": "eas build --profile development --platform ios"
+    "build:dev": "eas build --profile development --platform ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
